Remove title bar from android driver app to display web pages in full screen.

--- a/android-driver/res/values-v11/styles.xml
+++ b/android-driver/res/values-v11/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="FullscreenTheme">
+    <style name="FullscreenTheme" parent="@android:style/Theme.Holo.NoActionBar.Fullscreen">
     </style>
 
 </resources>
