--- a/android-driver/res/values/styles.xml
+++ b/android-driver/res/values/styles.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="FullscreenTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+    </style>
 
 </resources>
